Fix missing padding on ObjectivePanel and fix close button.

--- a/src/components/GenericModal/GenericModal.module.scss
+++ b/src/components/GenericModal/GenericModal.module.scss
@@ -35,15 +35,15 @@
 
 .Modal .Button {
   position: absolute;
-  top: 8px;
+  top: 6px;
   margin-right: 90vw;
   background-color: #222;
   border-radius: 100%;
   aspect-ratio: 1;
-  width: 40px;
+  width: 36px;
   color: grey;
   cursor: pointer;
-  font-size: 20px;
+  font-size: 18px;
 }
 
 .Modal .Button div {
